--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
-  "name": "uxp-template-default-starter",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "Default template for creating Adobe UXP based photoshop plugin."
+  "description": "My webpack project",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.13",
+    "@types/photoshop": "^22.5.0",
+    "@webpack-cli/generators": "^2.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.3.2",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
