--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "postinstall": "patch-package"
   },
+  "_comment_": "@types/photoshop",
   "devDependencies": {
     "@types/node": "^16.4.13",
-    "@types/photoshop": "^22.5.0",
-    "@webpack-cli/generators": "^2.2.0",
+    "@webpack-cli/generators": "^0.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "patch-package": "^6.4.7",
     "prettier": "^2.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
   }
 }
