--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,13 @@
     "target": "es5",
     "allowJs": true,
     "types": [
-      "node",
-      "photoshop"
+      "node"
     ]
   },
+  "typeRoots": [
+    "./node_modules/@types",
+  ],
   "files": [
-    "src/index.ts"
+    "src",
   ]
 }
