--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "watch": "webpack --watch",
     "postinstall": "patch-package"
   },
-  "_comment_": "@types/photoshop",
   "devDependencies": {
     "@types/node": "^16.4.13",
+    "@types/photoshop": "^22.5.0",
     "@webpack-cli/generators": "^0.1.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.3.2",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
   }
 }
